# IDOS

./: .gitmodules  CMakeLists.txt  DOC dev MQTT  README.md  async_pub.cpp  async_pub_serial.cpp  async_sub.cpp  async_sub_serial.cpp  gateway_mqtt.cpp  idos_message.cpp  install.sh  message.cpp  message.h  msg_manager.cpp  organigramme_gateway.xml
Doc/: README.md  filesExplanations.md  organigramme_broker.xml  organigramme_gateway.xml
certs/: ca.key  ca.srl
config/: config.yaml  message.json
depleted/: idos_message.h
deprecated/: async_pub_sample.cpp  async_pub_socket.cpp  async_sub_sample.cpp  async_sub_socket.cpp  gateway_mqtt.cpp  socketReceiving.py
examples/: async_pub.cpp  async_pub_serial.cpp  async_pub_socket.cpp  async_sub_serial.cpp  async_sub_socket.cpp  socketSending.py
header/: idos_message.h  message.h  msg_manager.h
libraries/: README.md
libraries/paho.mqtt.c/: .gitignore  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  VersionInfo.h  cmake_install.cmake  install_manifest.txt
libraries/paho.mqtt.c/src/: MQTTVersion  Makefile  cmake_install.cmake  libpaho-mqtt3a.so.1.3.0  libpaho-mqtt3as.so.1  libpaho-mqtt3as.so.1.3.0  libpaho-mqtt3c.so.1.3.0  libpaho-mqtt3cs.so.1  libpaho-mqtt3cs.so.1.3.0
libraries/paho.mqtt.c/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test1  test10  test11  test15  test2  test3  test4  test45  test5  test6  test8  test9  test95  test_issue373  thread
mosquitto_files/: README.md  mosquitto.conf  userList.txt
mosquitto_files/ca_certificates/: ca.crt
mosquitto_files/certs/: server.crt  server.csr  server.key
testfiles/: testplace.cpp
